Fixed alligns, gaps, fonts

--- a/assets/scss/base.scss
+++ b/assets/scss/base.scss
@@ -166,9 +166,6 @@ a{
   a{
     color: #FFFFFF;
   }
-  .product-contact-link-list{
-    text-align: right;
-  }
   .product-contact-link{
     font-size: 11px;
     line-height: 1.2;
