--- a/assets/scss/subscription.scss
+++ b/assets/scss/subscription.scss
@@ -1,4 +1,3 @@
-@import "base";
 
 body {border:none;}
 .message-container {
@@ -11,6 +10,8 @@ body {border:none;}
 	.brand-message-type {
 		td{
 			padding:15px 0 10px ;
+			vertical-align:bottom;
+			height:79px;
 		}
 	}
 	.message-layout {
@@ -18,7 +19,11 @@ body {border:none;}
 			display:none;
 		}
 		.title-page {
-			padding: 33px 0 2px ;
+			padding: 16px 0 2px;
+			h1 {
+				line-height:38px;
+				text-align:left;
+			}
 		}
 		.sub-title-page {
 			padding: 0 0 24px ;
@@ -26,7 +31,7 @@ body {border:none;}
 	}
 	.message-banner {
 		h1 {
-			font-family: 'Lucida Sans Unicode', sans-serif;
+			font-family: sans-serif;
 			color:#ffffff;
 			margin:0 ;
 			font-size:38px;
@@ -49,7 +54,7 @@ body {border:none;}
 				p {
 					font-size:8px;
 					background:#aca198;
-					font-family:'Lucida Sans Unicode', sans-serif; 
+					font-family: sans-serif; 
 					color:#ffffff; 
 					text-transform:uppercase; 
 					padding:0 0 0 12px;
@@ -76,8 +81,6 @@ body {border:none;}
 			.color-block {
 				td {					
 					.border-block {
-						margin: 0 0 0 2px;
-						padding: 0 0 0 8px;
 						.commentary-block {
 							img {
 								float: left;
@@ -118,10 +121,10 @@ body {border:none;}
   border-radius:5px;
   text-decoration:none;
   color: #ffffff;
-  font-family: 'DIN-Regular', sans-serif;
+  font-family: sans-serif;
 }
 h2.title-message-green-block {
-  font-family: 'DIN-Regular', sans-serif;
+  font-family: sans-serif;
   margin: 0 0 11px;
   font-size: 17px;
   font-weight: normal;
@@ -129,7 +132,7 @@ h2.title-message-green-block {
   color: #6ab480;
 }
 h2.title-message-blue-block {
-  font-family: 'DIN-Regular', sans-serif;
+  font-family: sans-serif;
   margin: 0 0 11px;
   font-size: 17px;
   font-weight: normal;
@@ -137,7 +140,7 @@ h2.title-message-blue-block {
   color: #1E7998;
 }
 h2.title-message-red-block {
-  font-family: 'DIN-Regular', sans-serif;
+  font-family: sans-serif;
   margin: 0 0 11px;
   font-size: 17px;
   font-weight: normal;
@@ -145,7 +148,7 @@ h2.title-message-red-block {
   color: #1E7998;
 }
 h2.title-message-yellow-block {
-  font-family: 'DIN-Regular', sans-serif;
+  font-family: sans-serif;
   margin: 0 0 11px;
   font-size: 17px;
   font-weight: normal;
@@ -194,11 +197,11 @@ span.text-under-title {
 	padding: 13px 30px 10px 0 ;
 	h3 {
 		font-size:22px;
-		font-family: 'DIN-Regular', sans-serif;
+		font-family: sans-serif;
 		margin:0 ;
 	}
 	p {
-		font-family: 'DIN-Regular', sans-serif;
+		font-family: sans-serif;
 		font-size: 14px;
 		line-height: 1.2;
 		padding-bottom: 14px;
@@ -232,7 +235,21 @@ span.text-under-title {
 .wrapp-title {
 	padding:0 0 17px;
 }
+.legal-address small {
+	color:#ffffff;
+}
+.product-contact-link-list .divider {
+	color:#ffffff;
+}
+.message-recip-actions .divider {
+	color: #776F67;
+}
+.product-contact-link-list {
+	padding:5px 0;
+}
 @media (max-width: 600px) {
+	.message-container .message-layout .title-page h1 {font-size:28px;}
+	.message-container .message-banner h2 {font-size:18px;}
 	.brand-logo {width:100%;text-align:center;}
 	.editorial-board-block {width:100%;}	
 	.learn-more-table {border-radius: 5px 5px 5px 5px;text-align: center;width: 100%;}
@@ -246,4 +263,12 @@ span.text-under-title {
 	.brand-message-type	{text-align: center;}
 	.mobile .module-hero {text-align: center;}
 	.brand-message-type td {text-align:center;}
+	.footer-logo {width:100%;}
+	.product-contact {text-align:center;}
+	.product-contact table{width:100%}
+	.product-contact table td{text-align:center;}
+	.message-footer-brand .product-contact-link-list{text-align:center;}
+	.social-button {width:100%;}
+	.social-button table{width:200px;}
+	.add-banner img {width:100%;}
 }
